2002-06-30  Andrew Csillag  <drew@localhost.localdomain>

	* SkunkWeb/Services/auth/__init__.py (getAuthorizer): made it so
	we don't need the PseudoDict thing we used to need.

2002-06-28  Jacob Smullyan  <jsmullyan@wnyc.org>

	* SkunkWeb/Makefile.in (DEMO_FILES): added components for python
	website, whose absence was breaking the demo.

	* SkunkWeb/swpython.py.in: minor change to accomodate setattr
	hook. 

	* pylibs/scopeable/_scope.c: minor changes to avoid running afoul
	of the setattr hook.

	* pylibs/scopeable/scope.py (Scopeable.__setattr__): Added setattr
	hook so as to raise an exception when someone tries an attribute
	assignment.

2002-06-28  Andrew Csillag  <acsillag@unix-101-21.hq.communityconnect.com>

	* SkunkWeb/sw.conf.in: added comment so that hopefully we won't
	forget about authActivated

	* pylibs/DT/DTCompilerUtil.py: made so that all exprs get the line
	endings converted to the native line ending.

2002-06-28  Jacob Smullyan  <jsmullyan@wnyc.org>

	* SkunkWeb/Services/userdir.py (doUserDirPre): now fixed so
	the Configuration object will clean itself up correctly;
	previously, use of userdir was incompatible with scoping the
	documentRoot. 

2002-06-27  Andrew Csillag  <acsillag@unix-101-21.hq.communityconnect.com>

	* pylibs/Logger.py: the logger now handles some really bizarre
	cases that shouldn't ever happen in reality (but of course have).

	* SkunkWeb/Services/auth/__init__.py,
	SkunkWeb/Services/auth/login.html,
	SkunkWeb/Services/auth/logout.html:
	
	fixed so that you can have two different auth schemes going at the
	same time in different dirs and still have it all work.

2002-06-26  Andrew Csillag  <acsillag@unix-101-21.hq.communityconnect.com>

	* 3.2.3 cut

2002-06-25  Andrew Csillag  <acsillag@unix-101-21.hq.communityconnect.com>

	* DT.py (DT.__call__): made so the __[thd] namespaces won't get
	hosed if an include throws an exception -- moved the unstore
	call into the finally: block
	